--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^16.5.1",
     "react-flexbox-grid": "^2.1.2",
     "react-helmet": "^5.2.0",
+    "react-icon": "^1.0.0",
     "react-icons": "^3.2.2",
     "react-responsive-modal": "^3.5.1",
     "react-typography": "^0.16.13",
