--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lodash": "^4.17.11",
     "prismjs": "^1.15.0",
     "react": "^16.5.1",
+    "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.5.1",
     "react-flexbox-grid": "^2.1.2",
     "react-grid-system": "^4.4.5",
